--- a/nginx.yml
+++ b/nginx.yml
@@ -3,11 +3,16 @@
   become: true
   tasks:
 
-  - name: update repository index
-    apt:
-      update_cache: yes
-
   - name: install nginx package
+    when: ansible_distribution == "Ubuntu"
     apt:
       name: nginx
       state: latest # install the latest version
+      update_cache: yes # <- update_cache is an option for apt so it will update cache before installing nginx
+
+  - name: install nginx package
+    when: ansible_distribution == "CentOS"
+    dnf:
+      name: nginx
+      state: latest # install the latest version
+      update_cache: yes
